# python-byte-interpreter

./: .gitignore  README.md  main.py  pyproject.toml  run_main_with_byterun.py
byterun/: pyobj.py  pyvm2.py
learning/: ast_module.py  compile.py  dis_module.py  learning.md  lecture.ipynb
tests/: test_binary_op.py  vmtest.py
