[tool.poetry]
name = "python-byte-interpreter"
version = "0.1.0"
description = ""
authors = ["Artem Balabashin <balabashinan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"